<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.training.center.kuzmin</groupId>
  <artifactId>epam-test-auto-nikita-kuzmin</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.version>7.4.0</testng.version>

    <selenium.version>4.0.0</selenium.version>
    <webdriver.version>5.0.3</webdriver.version>

    <checkstyle.version>8.42</checkstyle.version>
    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>

    <assertj.version>3.21.0</assertj.version>

    <aspectj.version>1.9.5</aspectj.version>
    <allure.version>2.14.0</allure.version>
  </properties>
  <profiles>
    <profile>
      <id>homework4-differnt-page-test-suite</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/DifferentElementsPageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework4-home-page-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/HomePageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework3-differnt-page-test-suite</id>
      <activation>
        <!--<activeByDefault>true</activeByDefault>-->
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw3/DifferentElementsPageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework3-home-page-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw3/HomePageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework2-differnt-page-test-suite</id>
      <activation>
       <!-- <activeByDefault>true</activeByDefault>-->
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/DifferentElementsPageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework2-home-page-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/HomePageTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework01-all-calculator-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/AllCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework01-sum-sub-test-suite</id>
      <activation>
        <!--<activeByDefault>true</activeByDefault>-->
      </activation>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/SumSubCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>

    <profile>
      <id>homework01-mult-div-test-suite</id>
      <properties>
        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/MultDivCalculatorTestSuite.xml</suite.xml.name>
      </properties>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>

    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdriver.version}</version>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.epam.tat.module4</groupId>
      <artifactId>calculator</artifactId>
      <version>1.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>


</project>